[package]
name = "perfprox"
version = "0.0.1"
authors = ["Brian Martin <brayniac@gmail.com>"]

description = "a performance measuring proxy server"

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1

[profile.bench]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[dependencies]
log = "0.3.1"
simple_logger = "0.3.1"
time = "0.1.35"
getopts = "*"
mio = "0.5.1"
bytes = "0.3.0"
tic = "0.0.2"